[gd_scene load_steps=4 format=3 uid="uid://rnvtnxiykibe"]

[ext_resource type="Script" uid="uid://tykf8y82jggj" path="res://explainer.gd" id="1_m1hgi"]
[ext_resource type="Theme" uid="uid://1vstrjh1n4gu" path="res://themes/question.tres" id="2_4eig4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i03xo"]
bg_color = Color(0.999072, 0.849281, 0.744841, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.996078, 0.482353, 0.12549, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.180392)
shadow_size = 135

[node name="Explainer" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m1hgi")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_i03xo")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 0

[node name="Title" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(0.106484, 0.0114266, 0.000601126, 1)
theme_override_font_sizes/font_size = 24
text = "How To Play"
horizontal_alignment = 1

[node name="MainText" type="RichTextLabel" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(1.53, 300)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_4eig4")
theme_override_colors/default_color = Color(0.10279, 0.0294519, 6.01634e-09, 1)
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "Main text"

[node name="HFlowContainer" type="HFlowContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 10
size_flags_stretch_ratio = 0.0

[node name="CloseButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer2/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("2_4eig4")
text = "Close"

[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer2/HFlowContainer/CloseButton" to="." method="_on_close_button_pressed"]
